--- a/Generation/pages/index/index.wxml
+++ b/Generation/pages/index/index.wxml
@@ -25,7 +25,7 @@
         <view
           style="width: {{windowWidth - 80}}px;"
           class="input_content">
-          <input class="input" name="{{index}}" maxlength="11" />
+          <input class="input" name="{{index}}" maxlength="9" placeholder="最多就9个字哦~" />
         </view>
         <view
           wx:if="{{index === textLines - 1}}"
