--- a/Generation/pages/index/index.wxss
+++ b/Generation/pages/index/index.wxss
@@ -7,6 +7,12 @@
   padding: 30px;
 }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .generate_content_blur {
   filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=4, MakeShadow=false);
   filter: blur(6px);
@@ -19,6 +25,7 @@
   border: 1px solid #eeeeee;
   border-radius: 2px;
   background-color: white;
+  margin-bottom: 16px;
 }
 
 .image_add {
@@ -30,14 +37,31 @@
   height: 100%;
 }
 
+.label {
+  font-size: 14px;
+  color: #555555;
+  padding-right: 16px;
+}
+
+.choices {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 18px 10px 18px;
+}
+
+.choices_text, .switch_text {
+  font-size: 12px;
+  color: #999999;
+}
+
 .input_content {
-  margin-top: 30px;
+  margin-top: 22px;
   background-color: white;
   border-radius: 2px;
   border: 1px solid #eeeeee;
   padding: 6px 10px;
 }
-
 
 .input {
   font-size: 16px;
@@ -77,7 +101,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding:0 30px;
+  padding: 0 30px;
 }
 
 .generated_image {
