--- a/Generation/pages/index/index.wxss
+++ b/Generation/pages/index/index.wxss
@@ -200,8 +200,8 @@
 }
 
 .push_right_content {
-  margin: 6% 8%;
-  padding-bottom: 6%;
+  margin: 0 8% 6% 8%;
+  padding: 6% 0;
 }
 
 .push_right_image {
@@ -230,4 +230,88 @@
 .push_right_button_text {
   color: white;
   font-size: 16px;
+}
+
+.push_right_default {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.perspective_down {
+  animation-name: perspectiveDown;
+  animation-fill-mode: both;
+  box-shadow: 0px 8px 20px #dddddd;
+  background-color: white;
+  padding: 6px 10px;
+  border-radius: 4px;
+  animation-duration: 3s;
+  animation-delay: 0.5s;
+}
+
+@keyframes perspectiveDown {
+  0% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(180deg);
+  }
+
+  20% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(0deg);
+    animation-timing-function: ease;
+  }
+
+  30% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(20deg);
+    animation-timing-function: linear;
+  }
+
+  40% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(0deg);
+    animation-timing-function: linear;
+  }
+
+  50% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(10deg);
+    animation-timing-function: linear;
+  }
+
+  60% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(0deg);
+    animation-timing-function: linear;
+  }
+
+  70% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(6deg);
+    animation-timing-function: linear;
+  }
+
+  80% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(0deg);
+    animation-timing-function: ease-in-out;
+  }
+
+  90% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(2deg);
+    animation-timing-function: linear;
+  }
+
+  100% {
+    transform-origin: 100% 0;
+    transform: perspective(800px) rotateX(0deg);
+    animation-timing-function: linear;
+  }
+}
+
+.perspective_down_text {
+  font-size: 16px;
+  color: #333333;
 }
