--- a/Generation/pages/mine/mine.wxss
+++ b/Generation/pages/mine/mine.wxss
@@ -12,7 +12,7 @@
 }
 
 .mine_user_avatar {
-  border-radius: 50%;
+  /* border-radius: 50%; */
   background-color: #c7c7c7;
   height: 5rem;
   width: 5rem;
