--- a/Generation/pages/feedback/feedback.wxss
+++ b/Generation/pages/feedback/feedback.wxss
@@ -24,7 +24,7 @@
   background-color: white;
   box-shadow: 0 0 16px #cccccc;
   border-radius: 4px;
-  padding: 8px;
+  padding: 12px;
   font-size: 1rem;
   color: #333333;
 }
@@ -43,6 +43,20 @@
 
 .input_box {
   padding: 16px;
+}
+
+.input {
+  padding: 7px 8px;
+}
+
+.error_text {
+  color: #ec2323;
+  font-size: 0.7rem;
+}
+
+.tips_text {
+  color: #cccccc;
+  font-size: 0.7rem;
 }
 
 .button {
